<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="infsolution.com.br.fidelize.NewElectorActivity">
    <TextView
        android:text="@string/title_act_new_elector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_name_elector"
                android:textSize="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                />
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_name_elector"
                android:textSize="14dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                />
            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.0"
                    android:text="@string/new_sex"
                    />
                <RadioButton
                    android:id="@+id/rbt_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/rbt_male"
                    android:layout_marginLeft="8dp"
                    />
                <RadioButton
                    android:id="@+id/rbt_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/rbt_female"
                    android:layout_marginLeft="8dp"
                    />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/rg_affiliate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.0"
                    android:text="@string/new_is_affiliate"
                    />
                <RadioButton
                    android:id="@+id/rbt_yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/rbt_yes"
                    android:layout_marginLeft="8dp"
                    />
                <RadioButton
                    android:id="@+id/rbt_not"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/rbt_not"
                    android:layout_marginLeft="8dp"
                    />
            </RadioGroup>
            <Button
                android:id="@+id/bt_new_date_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/bt_date_birth"
                android:onClick="newDateBirth"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/new_scholarity"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                />
            <Spinner

                android:id="@+id/spin_scholarity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spin_scholarity"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                ></Spinner>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/bt_go_new_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/bt_new_title"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:onClick="newTitle"
                    />
                <Button
                    android:id="@+id/bt_go_new_address"
                    android:layout_width="0pt"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/bt_new_address"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"

                    android:onClick="newAddress"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/bt_save_elector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"

                android:text="@string/bt_save"
                android:onClick="SaveElector"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
