<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_address"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_gravity="center"
    android:textSize="25sp"
    />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
        <EditText
            android:id="@+id/edt_new_address_street"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/et_new_street"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="22sp"
            />
                <EditText
                    android:id="@+id/edt_new_address_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/et_new_number"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="22sp"
                    android:inputType="number"
                    />
            </LinearLayout>
            <EditText
                android:id="@+id/edt_new_address_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_district"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="22sp"
                />
            <EditText
                android:id="@+id/edt_new_address_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_city"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="22sp"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
           <Spinner
               android:id="@+id/spin_state"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="5"
               android:entries="@array/spin_state"
               ></Spinner>
            <Spinner
                android:id="@+id/spin_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:entries="@array/spin_country"
                ></Spinner>
            </LinearLayout>
            <EditText
                android:id="@+id/edt_newaddress__zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_zip_code"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="22sp"
                android:inputType="number"
                />
        </LinearLayout>

    </ScrollView>


</LinearLayout>