<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_title_number"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/dlg_title_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_title_number"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="22sp"
        />
    <EditText
        android:id="@+id/dlg_title_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_title_zone"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="22sp"
        />
    <EditText
        android:id="@+id/dlg_title_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_title_section"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="22sp"
        />

</LinearLayout>